--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,15 +9,16 @@ spring:
     url: jdbc:mysql://localhost:3306/sys
     username: root
     password: relaybrand1!
+  # 타임리프 캐시 무효화
+  thymeleaf:
+    cache: false
+  # spring data jpa 설정
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    open-in-view: false
     show-sql: true
     hibernate:
       ddl-auto: update  # DB 초기화 전략
     properties:
       hibernate:
         format_sql: true # 콘솔에 출력되는 JPA 실행 쿼리를 가독성있게 표현
-  # 타임리프 캐시 무효화
-  thymeleaf:
-    cache: false
-
